add admin's authorization by jwt token
