# src/routers/api/auth/adminRouter.js
@@ -1,0 +1,8 @@
+import express from 'express';
+import { loginAdmin } from '../../../controllers/api/authController';
+
+const authRouter = express.Router();
+
+authRouter.post('/login', loginAdmin);
+
+export default authRouter;
