# src/routers/api/s3/thumbnailRouter.js
@@ -2,16 +2,17 @@ import express from 'express';
 import {
   getThumbnail,
   getThumbnails
-} from '../../controllers/api/s3ThumbnailController';
+} from '../../../controllers/api/s3/thumbnailController';
+import { middleAuth } from '../../../middlewares';
 
 const thumbnailRouter = express.Router();
 
 // get images list
 // api.k-peach.io/thumbnail
-thumbnailRouter.get('/', getThumbnails);
+thumbnailRouter.get('/', middleAuth, getThumbnails);
 
 // get a image
 // api.k-peach.io/thumbnail/{name}
-thumbnailRouter.get('/:name', getThumbnail);
+thumbnailRouter.get('/:name', middleAuth, getThumbnail);
 
 export default thumbnailRouter;
